SFDC_LD_Packages/objects-layouts/main/default/objects/Territory_Mapping__c/Territory_Mapping__c.object-meta.xml
<CustomObject>
    <label>Territory Mapping</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>Territory Mapping</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>