SFDC_LD_Packages/objects-layouts/main/default/objects/Territory_Mapping__c/fields/Field_US_Region__c.field-meta.xml
<CustomField>
    <fullName>Field_US_Region__c</fullName>
    <label>Field US Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>