SFDC_LD_Packages/objects-layouts/main/default/objects/Territory_Mapping__c/fields/Inside_Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Inside_Territory_Name__c</fullName>
    <label>Inside Territory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>