SFDC_LD_Packages/objects-layouts/main/default/objects/Territory_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Billing_Country__c</columns>
    <columns>Billing_State_Province__c</columns>
    <columns>Field_Territory_Name__c</columns>
    <columns>Field_US_Region__c</columns>
    <columns>Inside_Territory_Name__c</columns>
    <columns>Inside_US_Region__c</columns>
    <columns>SMB_Territory_Name__c</columns>
    <columns>SMB_US_Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>