SFDC_LD_Packages/objects-layouts/main/default/objects/Territory_Mapping__c/listViews/Update.listView-meta.xml
<ListView>
    <fullName>Update</fullName>
    <columns>NAME</columns>
    <columns>Billing_Country__c</columns>
    <columns>Billing_State_Province__c</columns>
    <columns>Field_Territory_Name__c</columns>
    <columns>Field_US_Region__c</columns>
    <columns>Inside_Territory_Name__c</columns>
    <columns>Inside_US_Region__c</columns>
    <columns>SMB_Territory_Name__c</columns>
    <columns>SMB_US_Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Billing_Country__c</field>
        <operation>equals</operation>
        <value>United States</value>
    </filters>
    <label>Update</label>
    <sharedTo>
        <role>Administrator</role>
    </sharedTo>
</ListView>